Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/TargetType36.out
TargetType36.java:17:30: compiler.err.unexpected.lambda
TargetType36.java:17:43: compiler.err.unexpected.lambda
2 errors
